tests/typecheck/should_fail/T8603.stderr
T8603.hs:33:17: error: [GHC-18872]
    • Couldn't match kind ‘* -> *’ with ‘*’
      When matching types
        m0 :: * -> *
        [a2] :: *
      Expected: [a2] -> StateT s RV a1
        Actual: t0 m0 (StateT s RV a1)
    • The function ‘lift’ is applied to two visible arguments,
        but its type ‘(Control.Monad.Trans.Class.MonadTrans t, Monad m) =>
                      m a -> t m a’
        has only one
      In a stmt of a 'do' block: prize <- lift uniform [1, 2, 3]
      In the expression:
        do prize <- lift uniform [1, 2, ....]
           return False

